# aoc_2024

./: CMakeLists.txt  Readme.md
.github/workflows/: cmake-single-platform.yml  gcc.yml
01/: CMakeLists.txt
01/part_1/: main.cpp
01/part_2/: main.cpp
02/: CMakeLists.txt
02/part_1/: main.cpp
02/part_2/: main.cpp
03/: CMakeLists.txt
03/part_1/: main.cpp
03/part_2/: main.cpp
04/: CMakeLists.txt
04/part_1/: main.cpp
04/part_2/: main.cpp
05/: CMakeLists.txt
05/part_1/: main.cpp
05/part_2/: main.cpp
06/: CMakeLists.txt
06/part_1/: main.cpp
06/part_2/: main.cpp
07/: CMakeLists.txt
07/part_1/: main.cpp
07/part_2/: main.cpp
08/: CMakeLists.txt
08/part_1/: main.cpp
08/part_2/: main.cpp
09/: CMakeLists.txt
09/part_1/: main.cpp
09/part_2/: main.cpp
10/: CMakeLists.txt
11/: CMakeLists.txt
12/: CMakeLists.txt
13/: CMakeLists.txt
14/: CMakeLists.txt
15/: CMakeLists.txt
16/: CMakeLists.txt
17/: CMakeLists.txt
18/: CMakeLists.txt
18/part_1/: main.cpp
19/: .clang-format  CMakeLists.txt
20/: CMakeLists.txt
21/: CMakeLists.txt
22/: CMakeLists.txt
23/: CMakeLists.txt
24/: CMakeLists.txt
25/: CMakeLists.txt
